--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^16.4.1",
     "draft-js": "^0.11.7",
+    "highlight.js": "^11.9.0",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
     "quill": "^1.3.6",
